Fix: 유사 카테고리가 없는 경우에 대한 로직 추가